[package]
name = "encrypted-package"
version = "0.1.0"
keywords = ["package", "encrypt", "decrypt", "data", "async"]
description = "A library that helps you send data in encrypted form."
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[features]
async = ["dep:tokio"]
proof-of-work = []
tracing = ["dep:tracing"]

[dependencies]
bincode = "1.3.0"
getrandom = { version = "0.2.7", features = ["std"] }
hex = "0.4.3"
openssl = "0.10.41"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["io-util"], optional = true }
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["io-util", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[test]]
name = "tests"
